Apply more minor fixes